# ais-recorder

./: .env.example  .gitignore  CHANGELOG.md  Cargo.toml  README.md  docker-compose.yml
config/: default.toml
migrations/: 20250101063544_initial-schema.sql
src/: config.rs  database.rs  errors.rs  lib.rs  main.rs  models.rs  mqtt.rs
src/database/: models.rs  types.rs
tests/: database.rs
