[package]
name = "ais-recorder"
version = "0.1.0"
edition = "2021"

[dependencies]
rumqttc = "0.24.0"
rusqlite = { version = "0.32.1", features = ["bundled"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
log = "0.4"
env_logger = "0.11.5"

[dev-dependencies]
tempfile = "3.3"
