[package]
name = "ais-recorder"
version = "0.1.0"
edition = "2021"

[dependencies]
rumqttc = { version = "0.24.0", features = ["use-rustls", "websocket"] }
rusqlite = { version = "0.32.1", features = ["bundled"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1.41"
thiserror = "2.0.7"
config = "0.14.1"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
serde_with = "3.11.0"
polars = { version = "0.45.1", features = ["dtype-u16", "dtype-u8", "polars-io"] }
polars-io = { version = "0.45.1", features = ["parquet"] }
tokio-cron-scheduler = { version = "0.13.0", features = ["tracing-subscriber"] }

[dev-dependencies]
tempfile = "3.3"
