[package]
name = "ais-recorder"
version = "0.1.0"
edition = "2021"

[dependencies]
rumqttc = { version = "0.24.0", features = ["use-rustls", "websocket"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1.41"
thiserror = "2.0.7"
config = "0.15.4"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
serde_with = "3.11.0"
sqlx = { version = "0.8.2", features = [
    "runtime-tokio",
    "postgres",
    "chrono",
    "macros",
    "migrate",
    "tls-rustls-ring",
] }
dotenvy = { version = "0.15.7", optional = true }

[dev-dependencies]
dotenvy = "0.15.7"
tempfile = "3.3"
